Added Eureka Service Broker

--- a/subscriber/src/main/resources/application.yml
+++ b/subscriber/src/main/resources/application.yml
@@ -1,10 +1,18 @@
+spring:
+    profiles: default
+    application:
+#      admin:
+#        enabled: true
+      name: receiver
+
 server:
-  port: 8081
+  port: ${PORT:8081}
 
 management:
   security:
     enabled: false
-  port: 8089
+  port: ${MGMTPORT:8089}
+
 endpoints:
   hypermedia:
     enabled: true
