--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -30,10 +30,17 @@
             <artifactId>spring-hateoas</artifactId>
             <version>0.23.0.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
 </project>
